Fixed tmpdir location Added tooltips for icons on toolbar Message appears if nothing selected and user tries copy/cut/compress/chmod/chown/delete

--- a/unauthenticated/templates/legacy_quicks.html
+++ b/unauthenticated/templates/legacy_quicks.html
@@ -2,7 +2,7 @@
 <a href="javascript:void(0)" onclick='selectAll()' title="$text{'select_all'}"><img src='unauthenticated/icons/quick/select-all.png' alt="$text{'select_all'}" /></a>
 <a href="javascript:void(0)" onclick='invertSelection()' title="$text{'invert_selection'}"><img src='unauthenticated/icons/quick/invert.png' alt="$text{'invert_selection'}" /></a>
 <a href="javascript:void(0)" onclick='copySelected()' title="$text{'copy_selected'}"><img src='unauthenticated/icons/quick/edit-copy.png' alt="$text{'copy_selected'}" /></a>
-<a href="javascript:void(0)" onclick='cutSelected()' title='Cut Selected'><img src='unauthenticated/icons/quick/edit-cut.png' alt="$text{'cut_selected'}" /></a>
+<a href="javascript:void(0)" onclick='cutSelected()' title="$text{'cut_selected'}"><img src='unauthenticated/icons/quick/edit-cut.png' alt="$text{'cut_selected'}" /></a>
 <a href='paste.cgi?path=$path' title="$text{'paste'}"><img src='unauthenticated/icons/quick/edit-paste.png' alt="$text{'paste'}" /></a>
 <a href="javascript:void(0)" onclick='createFolder(\"$path\")' title="$text{'create_folder'}"><img src='unauthenticated/icons/quick/folder-new.png' alt="$text{'create_folder'}" /></a>
 <a href="javascript:void(0)" onclick='createFile(\"$path\")' title="$text{'create_file'}"><img src='unauthenticated/icons/quick/document-new.png' alt="$text{'create_file'}" /></a>
