--- a/unauthenticated/templates/modern_dialogs.html
+++ b/unauthenticated/templates/modern_dialogs.html
@@ -1,4 +1,4 @@
-<div id="noFilesSelected" class="modal fade">
+<div id="nothingSelected" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -6,7 +6,7 @@
                 <h4 class="warning">$text{'warning_title'}</h4>
             </div>
             <div class="modal-body">
-                <h5>$text{'no_files_selected'}</h5>
+                <h5>$text{'nothing_selected'}</h5>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn bnt-default" data-dismiss="modal">$text{'dialog_ok'}</button>
