--- a/unauthenticated/templates/modern_dialogs.html
+++ b/unauthenticated/templates/modern_dialogs.html
@@ -26,7 +26,7 @@
                 <form id="createFolderForm" action="create_folder.cgi" method="post">
                     <div class="form-group">
                         <label>$text{'new_folder_name'}</label>
-                        <input id="name" name="name" type="text" class="form-control" required>
+                        <input id="name" name="name" type="text" class="form-control" data-placement="top" data-content="$text{'provide_folder_name'}" data-trigger="manual">
                         <input type='hidden' name='path' value='$path'>
                     </div>
                 </form>
@@ -50,7 +50,7 @@
                 <form id="createFileForm" action="create_file.cgi" method="post">
                     <div class="form-group">
                         <label>$text{'new_file_name'}</label>
-                        <input name="name" type="text" class="form-control" required>
+                        <input name="name" type="text" class="form-control" data-placement="top" data-content="$text{'provide_file_name'}" data-trigger="manual">
                         <input type='hidden' name='path' value='$path'>
                     </div>
                 </form>
@@ -74,7 +74,7 @@
                 <form id="renameForm" action="rename.cgi" method="post">
                     <div class="form-group">
                         <label>$text{'new_name'}</label>
-                        <input name="name" type="text" class="form-control" required>
+                        <input name="name" type="text" class="form-control" data-placement="top" data-content="$text{'provide_new_file_name'}" data-trigger="manual">
                         <input type='hidden' name='file' value='' required>
                         <input type='hidden' name='path' value='$path'>
                     </div>
@@ -99,7 +99,7 @@
                 <form id="compressSelectedForm">
                     <div class="form-group">
                         <label>$text{'archive_name'}</label>
-                        <input name="filename" type="text" class="form-control" required>.tar.gz
+                        <input name="filename" type="text" class="form-control" data-placement="top" data-content="$text{'provide_file_name'}" data-trigger="manual">.tar.gz
                     </div>
                 </form>
             </div>
@@ -143,7 +143,7 @@
                 <form id="chownForm">
                     <div class="form-group">
                         <label>$text{'user_name'}</label>
-                        <input name="owner" type="text" class="form-control" required>
+                        <input name="owner" type="text" class="form-control" data-placement="top" data-content="$text{'provide_user_name'}" data-trigger="manual">
                     </div>
                 </form>
             </div>
@@ -160,7 +160,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="warning">$text{'chown_selected'}</h4>
+                <h4 class="warning">$text{'chmod_selected'}</h4>
             </div>
             <div class="modal-body">
                 <form name="chmod">
@@ -196,13 +196,13 @@
                         </tr>
                     </table>
                 </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" onclick="chmodSelected()">$text{'dialog_change'}</button>
-        <button type="button" class="btn bnt-default" data-dismiss="modal">$text{'dialog_cancel'}</button>
-      </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" onclick="chmodSelected()">$text{'dialog_change'}</button>
+                <button type="button" class="btn bnt-default" data-dismiss="modal">$text{'dialog_cancel'}</button>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 
 <div id="downFromUrlDialog" class="modal fade">
@@ -216,7 +216,7 @@
         <form id="downFromUrlForm" action="http_download.cgi" method="post">
           <div class="form-group">
             <label>$text{'dialog_file_url'}</label>
-            <input name="link" type="url" class="form-control" required>
+            <input name="link" type="url" class="form-control" data-placement="top" data-content="$text{'provide_url'}" data-trigger="manual">
             <input type='hidden' name='path' value='$path'>
           </div>
         </form>
