--- a/unauthenticated/templates/legacy_dialogs.html
+++ b/unauthenticated/templates/legacy_dialogs.html
@@ -101,21 +101,21 @@
           </tr>
           <tr>
               <td>$text{'chmod_read'}</td>
-              <td><input type="checkbox" name="owner4" value="4" onclick="calc_chmod()"></td>
-              <td><input type="checkbox" name="group4" value="4" onclick="calc_chmod()"></td>
-              <td><input type="checkbox" name="other4" value="4" onclick="calc_chmod()"></td>
+              <td><input type="checkbox" name="owner4" value="4" onchange="calc_chmod()"></td>
+              <td><input type="checkbox" name="group4" value="4" onchange="calc_chmod()"></td>
+              <td><input type="checkbox" name="other4" value="4" onchange="calc_chmod()"></td>
           </tr>
           <tr>		
               <td>$text{'chmod_write'}</td>
-              <td><input type="checkbox" name="owner2" value="2" onclick="calc_chmod()"></td>
-              <td><input type="checkbox" name="group2" value="2" onclick="calc_chmod()"></td>
-              <td><input type="checkbox" name="other2" value="2" onclick="calc_chmod()"></td>
+              <td><input type="checkbox" name="owner2" value="2" onchange="calc_chmod()"></td>
+              <td><input type="checkbox" name="group2" value="2" onchange="calc_chmod()"></td>
+              <td><input type="checkbox" name="other2" value="2" onchange="calc_chmod()"></td>
           </tr>
           <tr>
               <td>$text{'chmod_execute'}</td>
-              <td><input type="checkbox" name="owner1" value="1" onclick="calc_chmod()"></td>
-              <td><input type="checkbox" name="group1" value="1" onclick="calc_chmod()"></td>
-              <td><input type="checkbox" name="other1" value="1" onclick="calc_chmod()"></td>
+              <td><input type="checkbox" name="owner1" value="1" onchange="calc_chmod()"></td>
+              <td><input type="checkbox" name="group1" value="1" onchange="calc_chmod()"></td>
+              <td><input type="checkbox" name="other1" value="1" onchange="calc_chmod()"></td>
           </tr>
           <tr>
               <td>----------</td>
@@ -125,13 +125,13 @@
           </tr>
           <tr>
               <td>$text{'chmod_sticky'}</td>
-              <td><input type="checkbox" name="sticky" value="1" onclick="calc_chmod()"></td>
+              <td><input type="checkbox" name="sticky" value="1" onchange="calc_chmod()"></td>
               <td></td>
               <td></td>
           </tr>
           <tr>
               <td>$text{'chmod_setgid'}</td>
-              <td><input type="checkbox" name="setgid" value="2" onclick="calc_chmod()"></td>
+              <td><input type="checkbox" name="setgid" value="2" onchange="calc_chmod()"></td>
               <td></td>
               <td></td>
           </tr>
