--- a/unauthenticated/templates/menu.html
+++ b/unauthenticated/templates/menu.html
@@ -10,7 +10,7 @@
   </button>
   <div class="btn-group">
     <button type="button" class="btn btn-inverse dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">
-    File <span class="caret"></span></button>
+    $text{'menu_file'} <span class="caret"></span></button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
       <li>
         <a onclick='createFileDialog()'>
@@ -37,7 +37,7 @@
   </div>
   <div class="btn-group">
     <button type="button" class="btn btn-inverse dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">
-    Edit <span class="caret"></span></button>
+    $text{'menu_edit'} <span class="caret"></span></button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
       <li>
         <a onclick='copySelected()'>
@@ -58,7 +58,7 @@
   </div>
   <div class="btn-group">
     <button type="button" class="btn btn-inverse dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">
-    Tools <span class="caret"></span></button>
+    $text{'menu_tools'} <span class="caret"></span></button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
       <li>
         <a onclick='searchDialog()'>
@@ -84,7 +84,7 @@
   </div>
   <div class="btn-group">
     <button type="button" class="btn btn-inverse dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">
-    Bookmarks <span class="caret"></span></button>
+    $text{'menu_bookmarks'} <span class="caret"></span></button>
     <ul class="dropdown-menu pull-right" aria-labelledby="dropdownMenu1">
       <li>
         <a href="bookmark.cgi?path=$path">
