--- a/unauthenticated/templates/legacy_dialogs.html
+++ b/unauthenticated/templates/legacy_dialogs.html
@@ -155,7 +155,8 @@
   <form id="searchForm" action="search.cgi" method="post">
       <div class="form-group">
           <label>$text{'search_label'}</label>
-          <input id="query" name="query" type="text" title="$text{'provide_search_query'}">
+          <input id="query" name="query" type="text" title="$text{'provide_search_query'}"><br>
+          <input id="caseins" name="caseins" type="checkbox" checked="checked"> $text{'search_insensitive'}
           <input type='hidden' name='path' value='$path'>
       </div>
   </form>
