Fixed #58 Number of files and folders shown under breadcrumbs in Authentic and under pagination in others.

--- a/unauthenticated/css/style.css
+++ b/unauthenticated/css/style.css
@@ -143,3 +143,12 @@ a:hover {
 a.pages {
     padding: 0 3px;
 }
+
+.breadcrumb {
+    margin-bottom: 10px;
+}
+
+.total {
+    clear: both;
+    margin-bottom: 10px;
+}
