--- a/unauthenticated/templates/menu.html
+++ b/unauthenticated/templates/menu.html
@@ -82,10 +82,11 @@
     <ul class="dropdown-menu pull-right" aria-labelledby="dropdownMenu1">
       <li>
         <a href="bookmark.cgi?path=$path">
-        	<i class="fa fa-bookmark-o" aria-hidden="true"></i> $text{'bookmark_folder'}
+          <i class="fa fa-bookmark-o" aria-hidden="true"></i> $text{'bookmark_folder'}
         </a>
-        $bookmarks
       </li>
+      <li role="separator" class="divider"></li>
+      $bookmarks
     </ul>
   </div>
   <button class="btn btn-danger" onclick='removeDialog()' title="$text{'remove_selected'}" data-toggle="tooltip" data-placement="bottom" data-container="body">
