--- a/unauthenticated/templates/modern_static.html
+++ b/unauthenticated/templates/modern_static.html
@@ -1,6 +1,7 @@
 <script type="text/javascript" src="unauthenticated/js/chmod-calculator.js"></script>
 <script type="text/javascript" src="unauthenticated/js/dataTables.bootstrap.js"></script>
 <script type="text/javascript" src="unauthenticated/js/bootstrap-hover-dropdown.min.js"></script>
+<script type="text/javascript" src="unauthenticated/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="unauthenticated/jquery/jquery-ui.min.js"></script>
 <script type=\"text/javascript\" src=\"unauthenticated/js/main.js\"></script>
 <script type="text/javascript" src="unauthenticated/jquery-contextmenu/jquery.contextMenu.min.js"></script>
