--- a/unauthenticated/templates/context_menu_search.html
+++ b/unauthenticated/templates/context_menu_search.html
@@ -1,31 +1,17 @@
-<ul id="context-menu" class="dropdown-menu">
+<ul id="context-menu-search" class="dropdown-menu">
+    <li data-item="open_folder">
+        <a><i class="fa fa-folder-open-o"></i> $text{'menu_open_folder'}</a>
+    </li>
+    <li data-item="open_containing">
+        <a><i class="fa fa-folder-open-o"></i> $text{'open_containing_folder'}</a>
+    </li>
     <li data-item="edit">
         <a><i class="fa fa-edit"></i> $text{'edit'}</a>
     </li>
     <li data-item="view">
         <a><i class="fa fa-eye"></i> $text{'menu_view'}</a>
     </li>
-    <li data-item="extract">
-        <a><i class="fa fa-share-square-o"></i> $text{'extract_archive'}</a>
-    </li>
-    <li data-item="rename">
-        <a><i class="fa fa-i-cursor"></i> $text{'rename'}</a>
-    </li>
-    <li data-item="download_selected">
-        <a><i class="fa fa-download" aria-hidden="true"></i> $text{'dialog_download'}</a>
-    </li>
     <li role="separator" class="divider"></li>
-    <li class="dropdown-submenu" data-item="create">
-        <a tabindex="0" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown"><i class="fa fa-plus"></i> $text{'create'}</a>
-        <ul class="dropdown-menu">
-            <li data-item="create_file">
-                <a><i class="fa fa-file-o"></i> $text{'create_file'}</a>
-            </li>
-            <li data-item="create_folder">
-                <a><i class="fa fa-folder-o"></i> $text{'create_folder'}</a>
-            </li>
-        </ul>
-    </li>
     <li class="dropdown-submenu">
         <a tabindex="0" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown"><i class="fa fa-list"></i> $text{'menu_buffer'}</a>
         <ul class="dropdown-menu">
@@ -34,12 +20,6 @@
             </li>
             <li data-item="cut_selected">
                 <a><i class="fa fa-cut"></i> $text{'cut_selected'}</a>
-            </li>
-            <li data-item="paste">
-                <a><i class="fa fa-paste"></i> $text{'paste'}</a>
-            </li>
-            <li data-item="symlink">
-                <a><i class="fa fa-link"></i> $text{'paste_symlink'}</a>
             </li>
         </ul>
     </li>
@@ -60,29 +40,12 @@
     <li class="dropdown-submenu">
         <a tabindex="0" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown"><i class="fa fa-wrench"></i> $text{'menu_tools'}</a>
         <ul class="dropdown-menu">
-            <li data-item="get_sizes">
-                <a><i class="fa fa-question" aria-hidden="true"></i> $text{'get_sizes'}</a>
-            </li>
             <li data-item="chmod_selected">
                 <a><i class="fa fa-gears" aria-hidden="true"></i> $text{'chmod_selected'}</a>
             </li>
             <li data-item="chown_selected">
                 <a><i class="fa fa-users" aria-hidden="true"></i> $text{'chown_selected'}</a>
             </li>
-            <li data-item="compress_selected">
-                <a><i class="fa fa-file-archive-o" aria-hidden="true"></i> $text{'compress_selected'}</a>
-            </li>
-            <li data-item="search">
-                <a><i class="fa fa-search"></i> $text{'search'}</a>
-            </li>
         </ul>
-    </li>
-    <li role="separator" class="divider"></li>
-    <li data-item="properties">
-        <a><i class="fa fa-gears"></i> $text{'properties'}</a>
-    </li>
-    <li role="separator" class="divider"></li>
-    <li data-item="delete">
-        <a><i class="fa fa-trash-o"></i> $text{'delete'}</a>
     </li>
 </ul>
